# esp-protocols-tree-master-components-esp_modem-examples-simple_cmux_client

./: README.md  x.diff
simple_cmux_client/: .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig
simple_cmux_client/components/A7672_gnss/: A7672_gnss.cpp  A7672_gnss.hpp
simple_cmux_client/components/esp_modem/include/cxx_include/: esp_modem_command_library.hpp  esp_modem_dce_module.hpp  esp_modem_dte.hpp
simple_cmux_client/components/esp_modem/include/generate/: esp_modem_command_declare.inc  esp_modem_command_declare_helper.inc
simple_cmux_client/components/esp_modem/src/: esp_modem_cmux.cpp  esp_modem_command_library.cpp  esp_modem_dce.cpp  esp_modem_dte.cpp  esp_modem_modules.cpp
simple_cmux_client/components/modem_pwkey/: modem_pwkey.c  modem_pwkey.h
simple_cmux_client/components/shiny_module/: shiny_module_dce.cpp  shiny_module_dce.hpp
simple_cmux_client/components/simple_cmux_client/: CMakeLists.txt  Kconfig.projbuild  client.crt  client.csr  client.key  simple_cmux_client_main.cpp  simple_mqtt_client.cpp
simple_cmux_client/main/: main.c
